src/main/components/table/UITable.scss
/* Copyright 2022 SIB Visions GmbH
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 * use this file except in compliance with the License. You may obtain a copy of
 * the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under
 * the License.
 */

 .p-datatable.p-datatable-selectable-cell .p-datatable-tbody > tr.p-selectable-row > td.p-selectable-cell:focus {
    outline: none
 }

.rc-table.p-datatable-selectable-cell {
    width: 100%;
    height: 100%;
    border-collapse: collapse;

    .p-datatable-table {
        position: relative;
    }

    &:not(.no-auto-resize) {
        .p-datatable-table {
            width: 100%;
            max-width: 100%;
        }

        // table {
        //     margin-right: 100%;
        // }
    }
    &.read-size {
        .p-datatable-table {
            table-layout: auto;
        }

        td > * {
            display: inline-block !important;
        }
    }
    .p-datatable-thead {
        >tr {
            >th {
                color: inherit;
                border-width: 0px 1px 1px 1px;
                font-weight: bold;
                padding: 0.6rem 1rem;

                .header-checkbox {
                    border-width: 1px;

                    .p-checkbox-box, .p-checkbox-input {
                        border-width: 1px;
                    }

                    &:hover .p-checkbox-box, .p-checkbox-input:hover {
                        cursor: default;
                    }
                }

                &.select-column {
                    justify-content: center;
                    .p-column-header-content {
                        justify-content: center;
                    }
                }

                .p-sortable-column-icon {
                    font-size: 14px;
                    margin-left: 4px;
                    display: none;

                    &.pi-sort-amount-up-alt, &.pi-sort-amount-down {
                        display: inline-block
                    }
                }
                .sort-index {
                    font-size: 10px;
                }
                .pi-sort-alt {
                    display: none;
                }

                &:focus {
                    box-shadow: none;
                }

                &.p-reorderable-column {
                    cursor: default;
                }
            }
        }
    }
    .p-datatable-tbody {
        >tr {
            &:focus {
                outline: none;
            }

            &.p-highlight {
                .cancel-padding {
                    box-shadow: inset 0 0 0 1000px rgba(#1b87e3 , .4);
                }

                .cell-editor-arrow {
                    visibility: visible;
                }

                > td {
                    .open-cell-editor {
                        box-shadow: none;

                        .p-inputtext,
                        &.p-inputtext {
                            padding-top: 0;
                            padding-bottom: 0;
                        }

                        .p-button.p-button-icon-only:not(.rc-toolbar-button):not(.p-speeddial-button) {
                            padding: 0px;
                        }

                        .p-inputtext:enabled:focus {
                            box-shadow: none;
                        }
                    }

                    &.cell-required {
                        opacity: 0.6;
                    }

                    &.cell-readonly {
                        opacity: 0.6;
                    }
                }
            }

            &:not(.p-highlight) {
                .cell-editor-arrow {
                    visibility: hidden;
                }
            }

            ::-moz-focus-inner {
                border: 0;
            }

            &.row-deleted td:before {
                content: " ";
                position: absolute;
                top: 50%;
                left: 0;
                border-bottom: 1px solid #111;
                width: 100%;
            }

            &.p-selectable-row.p-highlight > td.p-selectable-cell.p-highlight/*, &.p-selectable-row.p-highlight > td.p-selectable-cell:focus*/ {
                outline: none;
                outline-offset: 0;
                box-shadow: inset 0 0 0 2px #7f7f7f;
            }

            >td {
                position: relative;
                height: 35px;
                overflow: hidden;
                text-overflow: ellipsis;
                border-width: 0px 0px 1px 0px !important;
                user-select: text;
                outline: none;
                caret-color: auto;

                    .cell-data.cancel-padding {
                        width: calc(100% + calc(2 * var(--table-cell-padding-left-right, .4rem)));
                        height: calc(100% + calc(2 * var(--table-cell-padding-top-bottom, .2rem)));
                    }

                .cancel-padding {
                    margin: calc(-1 * var(--table-cell-padding-top-bottom, .2rem)) calc(-1 * var(--table-cell-padding-left-right, .4rem));

                    &:empty {
                        min-height: calc(100% + calc(2 * var(--table-cell-padding-top-bottom, .2rem)));
                    }
                }

                &.ChoiceCellEditor, &.CheckBoxCellEditor {
                    text-align: center;
                    justify-content: center;
                    align-items: center;
                }
                &.NumberCellEditor, &.TextCellEditor {
                    .cell-data {
                        justify-content: flex-end;

                        .cell-data-content {
                            display: flex;
                            width: 100%;
                            
                            .cell-data-content-text {
                                width: 100%;
                                display: flex;
                                justify-content: flex-end;
                            }
                        }
                    }
                }
                &.ImageViewer {
                    >.cell-data {
                        padding: 0;
                        vertical-align: middle;
                        text-align: center;
                        justify-content: center;
                        .rc-table-image {
                            height: inherit;
                        }

                        .cell-data-content {
                            display: flex;
                            width: 100%;

                            .cell-data-profileimage {
                                display: flex;
                                align-items: center;
                            }
                            
                            .cell-data-content-image {
                                width: 100%;
                                display: flex;
                                justify-content: center;
                            }
                        }

                    }
                }
                &.LinkedCellEditor, &.DateCellEditor {
                    button {
                        width: 24px;
                        padding: 0;
                    }
                    .cell-data-content {
                        display: flex;
                        width: 100%;
                    }
                }

                &>.cell-data {
                    width: 100%;
                    height: 100%;
                    display: flex;
                    align-items: center;
                    &:not(.html-cell) .cell-data-content {
                        overflow: hidden;
                        text-overflow: ellipsis;
                        flex-grow: 1;
                    }
                    &.cancel-padding {
                        padding: var(--table-cell-padding-top-bottom, .2rem) var(--table-cell-padding-left-right, .4rem);
                    }

                    @at-root .variable-row-height#{&} {
                        min-height: var(--table-data-min-height);
                        max-height: var(--table-data-max-height);
                    }
                }

                &.ChoiceCellEditor, &.CheckBoxCellEditor {
                    >.cell-data {
                        justify-content: center;
                    }
                }

                &.p-highlight {

                    &:not(.cell-readonly):not(.cell-required) {
                        background: unset;
                    }
                    
                    .cancel-padding {
                        box-shadow: inset 0 0 0 1000px rgba(#e3f2fd, .4);
                    }
                }
            }

            &:last-child {
                & > td {
                    border-bottom: 0 !important;
                }
            }

            &.p-row-odd {
                &.p-highlight {
                    td {
                        &.cell-required {
                            opacity: 0.6;
                        }

                        &.cell-readonly {
                            opacity: 0.6;
                        }
                    }
                }
            }
        }
    }
    .p-inputtext {
        padding: 3px 7px;
    }

    .p-datatable-wrapper {
        height: calc(100% - 1px);

        // .p-virtualscroller {
        //     height: 100% !important;
        // }
    }

    &.p-datatable-scrollable .p-datatable-wrapper:has(.p-virtualscroller) {
        overflow-y: hidden !important;
    }

//    .p-column-header-content { 
//        width: calc(100%); // inherit causes center and right align not working, because conent is too large. 
//    }                      // There is no advantage setting this against setting nothing, so it is commented.

    .p-column-title {
        user-select: none;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    .p-datatable-emptymessage {
        display: none;
    }

    .p-virtualscroller {
        contain: size layout paint;
    }
    
    .p-virtualscroller-content {
        contain: unset;
    }
}

.p-datatable.p-datatable-selectable-cell .p-datatable-tbody > tr.p-selectable-row {
    &.p-row-odd {
        > td.p-selectable-cell:not(.p-highlight) {
            &:hover {
                background: initial;
            }

            &.cell-readonly:hover {
                opacity: 0.6;
            }
        }
    }

    > td.p-selectable-cell:not(.p-highlight) {
        &:hover {
            background: initial;
        }

        &.cell-readonly:hover {
            opacity: 0.6;
        }
    }
}

.loading-text {
    display: block;
    background: #f1f1f1;;
    min-height: 19px;
    animation: pulse 0.4s infinite ease-in-out;
    text-indent: -99999px;
    overflow: hidden;
}

.cell-editor-arrow {
    font-size: 10px;
    line-height: 14px;
}

.rc-table table {
    border-style: hidden;
}

@keyframes pulse {
    0% {
        background: rgba(165, 165, 165, 0.1)
    }
    50% {
        background: rgba(165, 165, 165, 0.3)
    }
    100% {
        background: rgba(165, 165, 165, 0.1)
    }
}

